Added XML file output
Now AbstractRepository can save its objects into an XML output file.
Configured to save in a default path, defined in Constants and built in
the constructor based on the name of the generic class. Also moved
Constants to Data solution since it's a more suitable location.

--- a/NewsSite/NewsSite.csproj
+++ b/NewsSite/NewsSite.csproj
@@ -57,7 +57,6 @@
     <Compile Include="main\repository\GenericRepository.cs" />
     <Compile Include="main\repository\ArticleRepo.cs" />
     <Compile Include="main\repository\UserRepo.cs" />
-    <Compile Include="main\utils\Constants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -69,6 +68,10 @@
       <Project>{f5af4ecd-1bcb-451c-ace9-486c6b4854ab}</Project>
       <Name>MyData</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="main\utils\" />
+    <Folder Include="resources\files\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
