--- a/MyData/MyData.csproj
+++ b/MyData/MyData.csproj
@@ -47,6 +47,7 @@
     <Compile Include="repos\AbstractRepository.cs" />
     <Compile Include="repos\CRUDRepository.cs" />
     <Compile Include="repos\Repository.cs" />
+    <Compile Include="utils\Constants.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
